# vault

./: .env  .env.example  .eslintrc.json  .gitignore  .gitmodules  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
data/: consolidated_yields.json  strategies.json  yield_endpoints.json
data/categorized_yields/: Bitcoin.json  Ethereum.json  Solana.json  USD.json
data/graph/: balance_analysis_1.json  balance_analysis_2.json  balance_analysis_3.json  balance_analysis_4.json  balance_analysis_5.json  balance_analysis_6.json  balance_analysis_7.json
data/scripts/: balances.py  data_reorg.py  kamino.py  master.py  meteora.py  orca.py  raydium.py  sanctum.py  save.py  split_json_by_category.py
prisma/: schema.prisma  seed.ts
prisma/migrations/20250513122014_add_yield_farming_models/: migration.sql
prisma/migrations/20250513164237_update_strategy_add_yield_opportunity/: migration.sql
prisma/migrations/20250513165903_add_ticker_image_to_yield_opportunity/: migration.sql
program/vault-program/: Anchor.toml  package.json
program/vault-program/programs/vault-program/: Cargo.toml
program/vault-program/programs/vault-program/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: TrpcProvider.tsx  deposit-card.tsx  header.tsx  history-chart.tsx  strategy-preferences-card.tsx  wallet-button.tsx  yield-opt-out-card.tsx
src/hooks/: solanaProvider.tsx  useIsAdmin.ts
src/lib/: prisma.ts  trpc.ts  utils.ts
src/server/: trpc.ts
src/server/api/: trpc.ts
src/utils/: vault_program.json  vault_program.ts
(+16 files in other folders)
