[package]
name = "vault-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
